--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 
 <body>
   <div class=topnavbar />
-  <h1>Reflexy</h1>
-  <p>(Coming Soon...)</p>
+  <h1>Reflexy </h1>
   </div>
+  <center>
+    <h1>What is Reflexy?</h1>
+    <p>Reflexy is a social media app (coming soon)</p></center>
+  
 
 </body>
 
