--- a/index.html
+++ b/index.html
@@ -10,11 +10,17 @@
 
 <body>
   <div class=topnavbar />
-  <h1>Reflexy </h1>
-  </div>
-  <center>
-    <h1>What is Reflexy?</h1>
-    <p>Reflexy is a social media app (coming soon)</p></center>
+    
+      <h1>Reflexy </h1>
+      </div>
+  <main>
+      <center>
+      <h1>What is Reflexy?</h1>
+      <p>Reflexy is a social media app (coming soon)</p></center>
+  </main>
+  <center><footer>&copy; 2024 | Reflexy, All rights reserved</footer></center>
+  <a href=https://twitter.com/vuclirious>This site is made by vuclirious.</a>
+  
   
 
 </body>
