--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
   <div class=topnavbar />
     
-      <h1>Reflexy </h1>
+      <h1>Reflexy </h1><p>(Coming soon...)</p>
       </div>
   <main>
       <center>
       <h1>What is Reflexy?</h1>
-      <p>Reflexy is a social media app (coming soon)</p></center>
+      <p>Reflexy is a social media app where you can stay connected<br> with all of your friends and family. Reflexy is still not available <br> yet because the team is still working.</p></center>
   </main>
   <center><footer>&copy; 2024 | Reflexy, All rights reserved</footer></center>
   <a href=https://twitter.com/vuclirious>This site is made by vuclirious.</a>
