--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <center>
       <h1>What is Reflexy?</h1>
       <p>Reflexy is a social media app where you can stay connected<br> with all of your friends and family. Reflexy is still not available <br> yet because the team is still working.</p></center>
-  </main>
-  <center><footer>&copy; 2024 | Reflexy, All rights reserved</footer></center>
-  <a href=https://twitter.com/vuclirious>This site is made by Vuclirious.</a>
+  </main><br><br><br>
+  <center><footer>&copy; 2024 | Reflexy, All rights reserved</footer>
+  <a href=https://twitter.com/vuclirious>This site is made by Vuclirious.</a></center>
   
   
 
