--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
 
 <body>
   <div class=topnavbar />
-    
+      <form action="about-us">
+        <input type=submit value=About-Us>
+      </form>
       <h1>Reflexy </h1><p>(Coming soon...)</p>
+    <form action=contact-us>
+      <input type=submit value=Contact-Us>
+    </form>  
       </div>
   <main>
       <center>
